@@ -123,7 +123,7 @@ public class JavacTypes implements javax.lang.model.util.Types {
         Type ty = (Type)t;
         return types.directSupertypes(ty).stream()
                 .map(Type::stripMetadataIfNeeded)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @DefinedBy(Api.LANGUAGE_MODEL)
